--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -15,7 +15,7 @@ steps:
 
   - command: .buildkite/scripts/steps/functional/xpack_cigroup.sh
     label: 'Default CI Group'
-    parallelism: 27
+    parallelism: 1
     agents:
       queue: n2-4
     depends_on: build
@@ -26,41 +26,41 @@ steps:
         - exit_status: '*'
           limit: 1
 
-  - command: CI_GROUP=Docker .buildkite/scripts/steps/functional/xpack_cigroup.sh
-    label: 'Docker CI Group'
-    agents:
-      queue: n2-4
-    depends_on: build
-    timeout_in_minutes: 120
-    key: default-cigroup-docker
-    retry:
-      automatic:
-        - exit_status: '*'
-          limit: 1
+  # - command: CI_GROUP=Docker .buildkite/scripts/steps/functional/xpack_cigroup.sh
+  #   label: 'Docker CI Group'
+  #   agents:
+  #     queue: n2-4
+  #   depends_on: build
+  #   timeout_in_minutes: 120
+  #   key: default-cigroup-docker
+  #   retry:
+  #     automatic:
+  #       - exit_status: '*'
+  #         limit: 1
 
-  - command: .buildkite/scripts/steps/functional/oss_cigroup.sh
-    label: 'OSS CI Group'
-    parallelism: 11
-    agents:
-      queue: ci-group-4d
-    depends_on: build
-    timeout_in_minutes: 120
-    key: oss-cigroup
-    retry:
-      automatic:
-        - exit_status: '*'
-          limit: 1
+  # - command: .buildkite/scripts/steps/functional/oss_cigroup.sh
+  #   label: 'OSS CI Group'
+  #   parallelism: 11
+  #   agents:
+  #     queue: ci-group-4d
+  #   depends_on: build
+  #   timeout_in_minutes: 120
+  #   key: oss-cigroup
+  #   retry:
+  #     automatic:
+  #       - exit_status: '*'
+  #         limit: 1
 
-  - command: .buildkite/scripts/steps/functional/oss_accessibility.sh
-    label: 'OSS Accessibility Tests'
-    agents:
-      queue: ci-group-4d
-    depends_on: build
-    timeout_in_minutes: 120
-    retry:
-      automatic:
-        - exit_status: '*'
-          limit: 1
+  # - command: .buildkite/scripts/steps/functional/oss_accessibility.sh
+  #   label: 'OSS Accessibility Tests'
+  #   agents:
+  #     queue: ci-group-4d
+  #   depends_on: build
+  #   timeout_in_minutes: 120
+  #   retry:
+  #     automatic:
+  #       - exit_status: '*'
+  #         limit: 1
 
   - command: .buildkite/scripts/steps/functional/xpack_accessibility.sh
     label: 'Default Accessibility Tests'
@@ -73,57 +73,57 @@ steps:
         - exit_status: '*'
           limit: 1
 
-  - command: .buildkite/scripts/steps/functional/oss_firefox.sh
-    label: 'OSS Firefox Tests'
-    agents:
-      queue: ci-group-4d
-    depends_on: build
-    timeout_in_minutes: 120
-    retry:
-      automatic:
-        - exit_status: '*'
-          limit: 1
+  # - command: .buildkite/scripts/steps/functional/oss_firefox.sh
+  #   label: 'OSS Firefox Tests'
+  #   agents:
+  #     queue: ci-group-4d
+  #   depends_on: build
+  #   timeout_in_minutes: 120
+  #   retry:
+  #     automatic:
+  #       - exit_status: '*'
+  #         limit: 1
 
-  - command: .buildkite/scripts/steps/functional/xpack_firefox.sh
-    label: 'Default Firefox Tests'
-    agents:
-      queue: n2-4
-    depends_on: build
-    timeout_in_minutes: 120
-    retry:
-      automatic:
-        - exit_status: '*'
-          limit: 1
+  # - command: .buildkite/scripts/steps/functional/xpack_firefox.sh
+  #   label: 'Default Firefox Tests'
+  #   agents:
+  #     queue: n2-4
+  #   depends_on: build
+  #   timeout_in_minutes: 120
+  #   retry:
+  #     automatic:
+  #       - exit_status: '*'
+  #         limit: 1
 
-  - command: .buildkite/scripts/steps/functional/oss_misc.sh
-    label: 'OSS Misc Functional Tests'
-    agents:
-      queue: n2-4
-    depends_on: build
-    timeout_in_minutes: 120
-    retry:
-      automatic:
-        - exit_status: '*'
-          limit: 1
+  # - command: .buildkite/scripts/steps/functional/oss_misc.sh
+  #   label: 'OSS Misc Functional Tests'
+  #   agents:
+  #     queue: n2-4
+  #   depends_on: build
+  #   timeout_in_minutes: 120
+  #   retry:
+  #     automatic:
+  #       - exit_status: '*'
+  #         limit: 1
 
-  - command: .buildkite/scripts/steps/functional/xpack_saved_object_field_metrics.sh
-    label: 'Saved Object Field Metrics'
-    agents:
-      queue: n2-4
-    depends_on: build
-    timeout_in_minutes: 120
-    retry:
-      automatic:
-        - exit_status: '*'
-          limit: 1
+  # - command: .buildkite/scripts/steps/functional/xpack_saved_object_field_metrics.sh
+  #   label: 'Saved Object Field Metrics'
+  #   agents:
+  #     queue: n2-4
+  #   depends_on: build
+  #   timeout_in_minutes: 120
+  #   retry:
+  #     automatic:
+  #       - exit_status: '*'
+  #         limit: 1
 
-  - command: .buildkite/scripts/steps/test/jest.sh
-    label: 'Jest Tests'
-    parallelism: 8
-    agents:
-      queue: n2-4
-    timeout_in_minutes: 90
-    key: jest
+  # - command: .buildkite/scripts/steps/test/jest.sh
+  #   label: 'Jest Tests'
+  #   parallelism: 8
+  #   agents:
+  #     queue: n2-4
+  #   timeout_in_minutes: 90
+  #   key: jest
 
   - command: .buildkite/scripts/steps/test/jest_integration.sh
     label: 'Jest Integration Tests'
@@ -132,19 +132,19 @@ steps:
     timeout_in_minutes: 120
     key: jest-integration
 
-  - command: .buildkite/scripts/steps/test/api_integration.sh
-    label: 'API Integration Tests'
-    agents:
-      queue: n2-2
-    timeout_in_minutes: 120
-    key: api-integration
+  # - command: .buildkite/scripts/steps/test/api_integration.sh
+  #   label: 'API Integration Tests'
+  #   agents:
+  #     queue: n2-2
+  #   timeout_in_minutes: 120
+  #   key: api-integration
 
-  - command: .buildkite/scripts/steps/lint.sh
-    label: 'Linting'
-    agents:
-      queue: n2-2
-    key: linting
-    timeout_in_minutes: 90
+  # - command: .buildkite/scripts/steps/lint.sh
+  #   label: 'Linting'
+  #   agents:
+  #     queue: n2-2
+  #   key: linting
+  #   timeout_in_minutes: 90
 
   - command: .buildkite/scripts/steps/lint_with_types.sh
     label: 'Linting (with types)'
@@ -153,16 +153,16 @@ steps:
     key: linting_with_types
     timeout_in_minutes: 90
 
-  - command: .buildkite/scripts/steps/checks.sh
-    label: 'Checks'
-    agents:
-      queue: c2-8
-    key: checks
-    timeout_in_minutes: 120
+  # - command: .buildkite/scripts/steps/checks.sh
+  #   label: 'Checks'
+  #   agents:
+  #     queue: c2-8
+  #   key: checks
+  #   timeout_in_minutes: 120
 
-  - command: .buildkite/scripts/steps/storybooks/build_and_upload.sh
-    label: 'Build Storybooks'
-    agents:
-      queue: c2-4
-    key: storybooks
-    timeout_in_minutes: 60
+  # - command: .buildkite/scripts/steps/storybooks/build_and_upload.sh
+  #   label: 'Build Storybooks'
+  #   agents:
+  #     queue: c2-4
+  #   key: storybooks
+  #   timeout_in_minutes: 60
