--- a/.buildkite/pipelines/performance/nightly.yml
+++ b/.buildkite/pipelines/performance/nightly.yml
@@ -22,14 +22,14 @@ steps:
   - label: ":muscle: Performance Tests with FTR config"
     command: .buildkite/scripts/steps/functional/performance_ftr.sh
     agents:
-      queue: n2-4
+      queue: c2-16
     depends_on: build
     if: build.env('TEST_RUNNER') == null || build.env('TEST_RUNNER') == "FTR"
 
   - label: ":muscle: Performance Tests with Synthetics config"
     command: .buildkite/scripts/steps/functional/performance_synthetics.sh
     agents:
-      queue: n2-4
+      queue: c2-16
     depends_on: build
     if: build.env('TEST_RUNNER') == "SYNTHETICS"
 
