--- a/x-pack/plugins/osquery/cypress/tsconfig.json
+++ b/x-pack/plugins/osquery/cypress/tsconfig.json
@@ -2,12 +2,13 @@
   "extends": "../../../../tsconfig.base.json",
   "include": [
     "**/*",
-    "../cypress.config.ts",
-    "../serverless_cypress.config.ts",
+    "./cypress.config.ts",
+    "./serverless_cypress.config.ts",
     "../../../test_serverless/shared/lib"
   ],
   "exclude": [
-    "target/**/*"
+    "target/**/*",
+    "../../../test_serverless/shared/lib/security/default_http_headers.ts"
   ],
   "compilerOptions": {
     "outDir": "target/types",
@@ -25,6 +26,10 @@
     // at this time so we have to force the inclusion of this reference
     {
       "path": "../tsconfig.json",
+      "force": true
+    },
+    {
+      "path": "../../../test_serverless/tsconfig.json",
       "force": true
     },
     "@kbn/security-solution-plugin",
