--- a/.buildkite/pipelines/es_serverless/verify_es_serverless_image.yml
+++ b/.buildkite/pipelines/es_serverless/verify_es_serverless_image.yml
@@ -45,6 +45,42 @@ steps:
             - exit_status: '*'
               limit: 1
 
+      - command: .buildkite/scripts/steps/functional/security_serverless.sh
+        label: 'Serverless Security Cypress Tests'
+        agents:
+          queue: n2-4-spot
+        depends_on: build
+        timeout_in_minutes: 40
+        parallelism: 2
+        retry:
+          automatic:
+            - exit_status: '*'
+              limit: 1
+
+      - command: .buildkite/scripts/steps/functional/security_serverless_explore.sh
+        label: 'Serverless Explore - Security Solution Cypress Tests'
+        agents:
+          queue: n2-4-spot
+        depends_on: build
+        timeout_in_minutes: 60
+        parallelism: 2
+        retry:
+          automatic:
+            - exit_status: '*'
+              limit: 1
+
+      - command: .buildkite/scripts/steps/functional/security_serverless_investigations.sh
+        label: 'Serverless Investigations - Security Solution Cypress Tests'
+        agents:
+          queue: n2-4-spot
+        depends_on: build
+        timeout_in_minutes: 120
+        parallelism: 2
+        retry:
+          automatic:
+            - exit_status: '*'
+              limit: 1
+
   - wait: ~
 
   - label: ":arrow_up::elastic::arrow_up: Promote docker image"
