--- a/.buildkite/pipelines/pull_request/defend_workflows.yml
+++ b/.buildkite/pipelines/pull_request/defend_workflows.yml
@@ -14,7 +14,7 @@ steps:
   - command: .buildkite/scripts/steps/functional/defend_workflows_burn.sh
     label: 'Defend Workflows Cypress Tests, burning changed specs'
     agents:
-      queue: n2-4-spot
+      queue: n2-4-virt
     depends_on: build
     timeout_in_minutes: 60
     soft_fail: true
