--- a/x-pack/plugins/osquery/cypress/support/project_controller_osquery_roles.yml
+++ b/x-pack/plugins/osquery/cypress/support/project_controller_osquery_roles.yml
@@ -1,44 +1,10 @@
-#soc_manager:
-#  indices:
-#    - names:
-#        - .lists*
-#        - .items*
-#      privileges:
-#        - maintenance
-#        - read
-#  applications:
-#    - application: siem
-#      privileges:
-#        - all
-#      resources: "*"
-#    - application: securitySolution
-#      privileges:
-#        - all
-#      resources: "*"
-#    - application: discover
-#      privileges:
-#        - all
-#      resources: "*"
-#    - application: visualize
-#      privileges:
-#        - read
-#      resources: "*"
-#    - application: observabilityCases
-#      privileges:
-#        - all
-#      resources: "*"
-#    - application: securitySolutionCases
-#      privileges:
-#        - all
-#      resources: "*"
-#    - application: infrastructure
-#      privileges:
-#        - read
-#      resources: "*"
-#    - application: indexPatterns
-#      privileges:
-#        - all
-#      resources: "*"
+# add more functionalities just for ESS environment
+soc_manager:
+  applications:
+    - application: observabilityCases
+      privileges:
+        - all
+      resources: "*"
 
 # custom roles for osquery lack of permission testing
 reader:
