--- a/packages/kbn-management/settings/application/tsconfig.json
+++ b/packages/kbn-management/settings/application/tsconfig.json
@@ -5,7 +5,8 @@
     "types": [
       "jest",
       "node",
-      "react"
+      "react",
+      "@testing-library/jest-dom"
     ]
   },
   "include": [
