--- a/packages/kbn-management/settings/application/tsconfig.json
+++ b/packages/kbn-management/settings/application/tsconfig.json
@@ -26,5 +26,9 @@
     "@kbn/test-jest-helpers",
     "@kbn/core-application-browser",
     "@kbn/i18n-react",
+    "@kbn/management-settings-components-field-category",
+    "@kbn/react-kibana-context-root",
+    "@kbn/core-theme-browser-mocks",
+    "@kbn/core-i18n-browser",
   ]
 }
