--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -881,6 +881,8 @@ packages/kbn-yarn-lock-validator @elastic/kibana-operations
 /test/functional/apps/visualize/ @elastic/kibana-visualizations
 /x-pack/test/functional/apps/graph @elastic/kibana-visualizations
 /test/api_integration/apis/event_annotations @elastic/kibana-visualizations
+/x-pack/test_serverless/functional/test_suites/common/visualizations/ @elastic/kibana-visualizations
+/x-pack/test_serverless/functional/fixtures/kbn_archiver/lens/ @elastic/kibana-visualizations
 
 # Global Experience
 
