--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1421,6 +1421,12 @@ x-pack/plugins/observability_shared/public/components/profiling @elastic/profili
 # Shared UX
 packages/react @elastic/appex-sharedux
 
+# OpenAPI spec files
+/x-pack/plugins/fleet/common/openapi          @elastic/platform-docs-team
+/x-pack/plugins/ml/common/openapi             @elastic/platform-docs-team
+/packages/core/saved-objects/docs/openapi     @elastic/platform-docs-team
+/plugins/data_views/docs/openapi              @elastic/platform-docs-team
+
 ####
 ## These rules are always last so they take ultimate priority over everything else
 ####
