--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1422,10 +1422,10 @@ x-pack/plugins/observability_shared/public/components/profiling @elastic/profili
 packages/react @elastic/appex-sharedux
 
 # OpenAPI spec files
-/x-pack/plugins/fleet/common/openapi          @elastic/platform-docs-team
-/x-pack/plugins/ml/common/openapi             @elastic/platform-docs-team
-/packages/core/saved-objects/docs/openapi     @elastic/platform-docs-team
-/plugins/data_views/docs/openapi              @elastic/platform-docs-team
+/x-pack/plugins/fleet/common/openapi          @elastic/platform-docs
+/x-pack/plugins/ml/common/openapi             @elastic/platform-docs
+/packages/core/saved-objects/docs/openapi     @elastic/platform-docs
+/plugins/data_views/docs/openapi              @elastic/platform-docs
 
 ####
 ## These rules are always last so they take ultimate priority over everything else
