--- a/x-pack/plugins/osquery/cypress/tsconfig.json
+++ b/x-pack/plugins/osquery/cypress/tsconfig.json
@@ -5,7 +5,6 @@
     "./cypress.config.ts",
     "./serverless_cypress.config.ts",
     "../../../test_serverless/shared/lib",
-    "../../../test/security_solution_cypress/cypress"
   ],
   "exclude": [
     "target/**/*",
@@ -23,6 +22,9 @@
   "kbn_references": [
     {
       "path": "../../../test_serverless/tsconfig.json"
+    },
+    {
+      "path": "../../../test/security_solution_cypress/cypress/tsconfig.json"
     },
     "@kbn/cypress-config",
     // cypress projects that are nested inside of other ts project use code
