--- a/config/serverless.security.yml
+++ b/config/serverless.security.yml
@@ -17,11 +17,11 @@ xpack.securitySolutionServerless.productTypes:
     { product_line: 'endpoint', product_tier: 'complete' },
   ]
 
-xpack.securitySolution.settings: {
-  sideNavEnabled: false,
-  ILMEnabled: false,
-  ESQLEnabled: false
-}
+xpack.securitySolution.offeringSettings: {
+    sideNavEnabled: false, # Internal security side navigation disabled, the serverless global chrome navigation is used instead
+    ILMEnabled: false, # Index Lifecycle Management (ILM) functionalities disabled, not supported by serverless Elasticsearch
+    ESQLEnabled: false, # ES|QL disabled, not supported by serverless Elasticsearch
+  }
 
 ## Set the home route
 uiSettings.overrides.defaultRoute: /app/security/get_started
