--- a/packages/kbn-ui-shared-deps-npm/BUILD.bazel
+++ b/packages/kbn-ui-shared-deps-npm/BUILD.bazel
@@ -41,6 +41,7 @@ RUNTIME_DEPS = [
   "@npm//@elastic/eui",
   "@npm//@elastic/numeral",
   "@npm//@emotion/cache",
+  "@npm//@emotion/css",
   "@npm//@emotion/react",
   "@npm//@hello-pangea/dnd",
   "@npm//@tanstack/react-query",
