[SLO] Added clean up task for stale slo definitions (#171776)
## Summary

Fixes https://github.com/elastic/kibana/issues/169398
Fixes https://github.com/elastic/kibana/issues/171577

Clean up SLO definitions not matching current stats of stored SLO saved
objects.

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>

--- a/x-pack/plugins/observability/kibana.jsonc
+++ b/x-pack/plugins/observability/kibana.jsonc
@@ -29,6 +29,7 @@
       "observabilityShared",
       "observabilityAIAssistant",
       "ruleRegistry",
+      "taskManager",
       "triggersActionsUi",
       "security",
       "share",
