attach slo card to dashboard (#172670)
Fixes https://github.com/elastic/kibana/issues/171349




https://github.com/elastic/kibana/assets/2852703/f951885a-e0f3-4f12-bfa0-fe5e354c9285

---------

Co-authored-by: shahzad31 <shahzad31comp@gmail.com>

--- a/x-pack/plugins/observability/tsconfig.json
+++ b/x-pack/plugins/observability/tsconfig.json
@@ -97,6 +97,7 @@
     "@kbn/serverless",
     "@kbn/dashboard-plugin",
     "@kbn/calculate-auto",
+    "@kbn/presentation-util-plugin",
     "@kbn/task-manager-plugin",
     "@kbn/core-elasticsearch-client-server-mocks",
     "@kbn/core-saved-objects-api-server-mocks"
