--- a/x-pack/plugins/observability/kibana.jsonc
+++ b/x-pack/plugins/observability/kibana.jsonc
@@ -21,6 +21,7 @@
       "dataViewEditor",
       "embeddable",
       "uiActions",
+      "presentationUtil",
       "exploratoryView",
       "features",
       "files",
@@ -55,7 +56,8 @@
       "kibanaUtils",
       "unifiedSearch",
       "stackAlerts",
-      "spaces"
+      "spaces",
+      "embeddable"
     ],
     "extraPublicDirs": [
       "common"
