--- a/x-pack/plugins/elastic_assistant/tsconfig.json
+++ b/x-pack/plugins/elastic_assistant/tsconfig.json
@@ -13,6 +13,7 @@
     "../../../typings/**/*"
   ],
   "kbn_references": [
+    "@kbn/analytics-client",
     "@kbn/core",
     "@kbn/core-http-server",
     "@kbn/licensing-plugin",
