[chore] Correct dependency inconsistencies in Presentation team plugins

--- a/src/plugins/controls/kibana.jsonc
+++ b/src/plugins/controls/kibana.jsonc
@@ -8,16 +8,18 @@
     "server": true,
     "browser": true,
     "requiredPlugins": [
-      "presentationUtil",
-      "savedObjects",
-      "kibanaReact",
-      "expressions",
-      "embeddable",
-      "dataViews",
       "data",
-      "unifiedSearch",
-      "uiActions"
+      "dataViews",
+      "embeddable",
+      "uiActions",
+      "unifiedSearch"
     ],
-    "extraPublicDirs": ["common"]
+    "requiredBundles": [
+      "kibanaReact",
+      "presentationUtil"
+    ],
+    "extraPublicDirs": [
+      "common"
+    ]
   }
 }
