--- a/src/plugins/presentation_util/kibana.jsonc
+++ b/src/plugins/presentation_util/kibana.jsonc
@@ -8,14 +8,18 @@
     "server": true,
     "browser": true,
     "requiredPlugins": [
-      "savedObjects",
-      "kibanaReact",
       "contentManagement",
-      "embeddable",
-      "expressions",
       "dataViews",
       "uiActions"
     ],
-    "extraPublicDirs": ["common"]
+    "requiredBundles": [
+      "savedObjects",
+      "kibanaReact",
+      "expressions",
+      "embeddable"
+    ],
+    "extraPublicDirs": [
+      "common"
+    ]
   }
 }
