--- a/x-pack/plugins/dashboard_enhanced/kibana.jsonc
+++ b/x-pack/plugins/dashboard_enhanced/kibana.jsonc
@@ -6,14 +6,16 @@
     "id": "dashboardEnhanced",
     "server": true,
     "browser": true,
-    "configPath": ["xpack", "dashboardEnhanced"],
+    "configPath": [
+      "xpack",
+      "dashboardEnhanced"
+    ],
     "requiredPlugins": [
       "dashboard",
       "data",
       "embeddable",
       "share",
-      "uiActionsEnhanced",
-      "unifiedSearch"
+      "uiActionsEnhanced"
     ],
     "requiredBundles": [
       "embeddable",
