--- a/src/plugins/links/kibana.jsonc
+++ b/src/plugins/links/kibana.jsonc
@@ -11,13 +11,15 @@
       "contentManagement",
       "dashboard",
       "embeddable",
-      "kibanaReact",
-      "kibanaUtils",
       "presentationUtil",
-      "uiActionsEnhanced",
       "visualizations"
     ],
-    "optionalPlugins": ["triggersActionsUi", "usageCollection"],
-    "requiredBundles": ["savedObjects"]
+    "optionalPlugins": [
+      "usageCollection"
+    ],
+    "requiredBundles": [
+      "uiActionsEnhanced",
+      "savedObjects"
+    ]
   }
 }
