--- a/x-pack/plugins/monitoring/tsconfig.json
+++ b/x-pack/plugins/monitoring/tsconfig.json
@@ -42,6 +42,7 @@
     "@kbn/observability-shared-plugin",
     "@kbn/shared-ux-link-redirect-app",
     "@kbn/logs-shared-plugin",
+    "@kbn/alerts-as-data-utils",
   ],
   "exclude": [
     "target/**/*",
