--- a/x-pack/plugins/transform/tsconfig.json
+++ b/x-pack/plugins/transform/tsconfig.json
@@ -71,7 +71,8 @@
     "@kbn/core-plugins-server",
     "@kbn/data-view-editor-plugin",
     "@kbn/ml-data-view-utils",
-    "@kbn/ml-creation-wizard-utils"
+    "@kbn/ml-creation-wizard-utils",
+    "@kbn/alerts-as-data-utils"
   ],
   "exclude": [
     "target/**/*",
